name:               lei
version:            0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) Renzo Carbonara 2015
author:             Renzo Carbonara
maintainer:         renzocarbonaraλgmail.com
stability:          Experimental
homepage:           https://github.com/k0001/lei
bug-reports:        https://github.com/k0001/lei/issues
category:
build-type:         Simple
cabal-version:      >=1.10
synopsis:           Organize your MVC application.
extra-source-files: README.md changelog.md
synopsis:           Organize your MVC application.

source-repository head
    type: git
    location: git://github.com/k0001/lei.git

library
  hs-source-dirs:  src/lib
  exposed-modules: Lei
  build-depends:
      async (>=2.0 && <2.1)
    , bifunctors (>=4.2 && <4.3)
    , base (>=4.5 && <5.0)
    , containers (>=0.5 && <0.6)
    , mtl (>=2.1 && <2.3)
    , pipes (>=4.1 && <4.2)
    , stm (>=2.4 && <2.5)
    , transformers (>=0.3 && <0.5)
  ghc-options: -O2 -Wall
  ghcjs-options: -O3 -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable lei-example-ping-pong-cli
  hs-source-dirs:      src/example-ping-pong-cli
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  build-depends:
      async (>=2.0 && <2.1)
    , base
    , lei
    , transformers
